--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,9 +51,9 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="{{ site.baseurl }}"> Home </a></li>
-                        <li><a href="#"> My Website </a></li>
+                        <!-- <li><a href="#"> My Website </a></li> -->
                         <li><a href="{{ site.baseurl }}/archive"> Archive </a></li>
-                        <li><a href="#"> Practice </a></li>
+                        <li><a href="{{ site.baseurl }}/practice"> Practice </a></li>
                     </ul>
                 </div>
             </div>
