--- a/css/main.css
+++ b/css/main.css
@@ -5,587 +5,21 @@
 /* -----------------------------------Animations----------------------------------- */
 
 @keyframes wiggle {
-0% { top: -5px; }
-50% { top: 5px; }
-100% { top: -5px; }
+    0% { top: -5px; }
+    50% { top: 5px; }
+    100% { top: -5px; }
 }
 
-/* -----------------------------------Default----------------------------------- */
+/* -----------------------------------Includes----------------------------------- */
 
-    html {
-        position: relative;
-        min-height: 100%;
-        max-width: 100%;
-        overflow-x: hidden;
-    }
-
-    body {
-        padding-top: 55px;
-        position: relative;
-    }
-
-    .container-fluid {
-    	padding: 0;
-    }
-
-    .row {
-    	margin: 9px 0;
-    }
-
-    /* Navbar */
-
-    .site-navbar {
-    	border-bottom: 1px solid #bbb;
-    	border-top: 3px solid #333;
-        margin-bottom: 0;
-    }
-
-    .brand {
-    	height: 50px;
-    	position: relative;
-    	font-size: 30px;
-        font-weight: 300;
-        letter-spacing: -1px;
-        padding: 2px 15px 0 15px;
-        line-height: 50px;
-        color: #424242;
-    }
-
-    .brand:hover {
-    	color: #424242;
-    }
-
-    .brand::before {
-      content: "";
-      position: absolute;
-      width: 100%;
-      height: 2px;
-      bottom: 0;
-      left: 0;
-      background-color: #666;
-      visibility: hidden;
-      -webkit-transform: scaleX(0);
-      transform: scaleX(0);
-      -webkit-transition: all 0.3s ease-in-out 0s;
-      transition: all 0.3s ease-in-out 0s;
-    }
-
-    .brand:hover:before {
-      visibility: visible;
-      -webkit-transform: scaleX(0.9);
-      transform: scaleX(0.9);
-    }
-
-    /* Footer */
-
-    .footer {
-        bottom: 0;
-        width: 100%;
-        height: 350px;
-        margin-bottom: 0;
-        margin-top: 70px;
-        color: rgba(0, 0, 0, 0.5);
-        border-top: 2px solid #ccc;
-    }
-
-    .footer .container {
-        padding-top: 60px;
-        padding-bottom: 30px;
-    }
-
-    .footer .left p {
-        margin-bottom: 10px;
-        font-family: 'Cabin', sans-serif;
-        font-size: 1.5em;
-    }
-
-    .footer .left a {
-        font-family: 'Raleway', sans-serif;
-        font-size: 2em;
-        color: #262626;
-    }
-
-    .footer .left a:hover {
-        color: #444;
-        text-decoration: none;
-        cursor: pointer;
-    }
-
-    .footer .center h4 {
-        text-transform: uppercase;
-        margin-bottom: 20px;
-        font-size: 22px;
-        text-align: center;
-    }
-
-    .footer .center ul {
-        list-style: none;
-        width: 150px;
-        margin: 0 auto;
-        padding: 0;
-    }
-
-    .footer .center li a {
-        color: rgba(0, 0, 0, 0.5);
-        font-size: 1.1em;
-    }
-
-    .footer .center li a:hover {
-        color: rgba(0, 0, 0, 0.7);
-    }
-
-    .footer .fa {
-        font-size: 20px;
-        margin-right: 10px;
-    }
-
-    .footer .fa-facebook-square {
-        color: #3B5998;
-    }
-
-    .footer .fa-google-plus-square {
-        color: #DD4B39;
-    }
-
-    .footer .fa-github {
-        color: #444444;
-    }
-
-    .footer .fa-pinterest {
-        color: #CB2027;
-    }
-
-    .footer .fa-quora {
-        color: rgba(200,0,0,0.8);
-    }
-
-    .footer .right p:nth-child(1) {
-        font-family: 'Raleway', sans-serif;
-        font-size: 1.5em;
-        margin-bottom: 20px;
-    }
-
-    .footer .right p:nth-child(3) {
-        font-family: 'Cabin', sans-serif;
-        font-size: 1.3em;
-        line-height: 1.8em;
-        margin-top: 25px;
-    }
-
-    .footer .right a {
-        font-family: 'Cabin', sans-serif;
-        font-size: 1.5em;
-        font-weight: 100;
-        color: #444;
-        padding: 5px 20px 5px 20px;
-        border: 1px solid #bfbfbf;
-    }
-
-    .footer .right a:hover {
-        text-decoration: none;
-        color: #444;
-        cursor: pointer;
-    }
-
-    .footer .row2::before {
-        content: "";
-        width: 60%;
-        margin: 30px auto;
-        display: block;
-        border: 1px solid #898989;
-    }
-
-    .footer .glyphicon-heart {
-        color: rgba(200, 0, 0, 0.8);
-    }
-
-    .footer .row2 {
-        font-size: 1.8em;
-    }
+{% include css/default.css %}
 
 {% include css/index.css %}
 
-/* -----------------------------------Posts----------------------------------- */
-
-    .post-content h1 {
-    	font-family: 'Paytone One', sans-serif;
-    	font-size: 6em;
-    	color: #222;
-    	text-align: center;
-    	margin-bottom: 15px;
-    	margin-top: 0;
-    }
-
-    .post-content h2 {
-    	font-family: 'Raleway', sans-serif;
-    	text-align: center;
-    	font-size: 2em;
-    	margin-bottom: 25px;
-    }
-
-    .post-content h3 {
-    	font-family: 'Raleway', sans-serif;
-    	font-size: 1.9em;
-    	margin-bottom: 20px;
-    }
-
-    .post-content h4 {
-    	font-family: 'Raleway', sans-serif;
-    	font-size: 1.7em;
-    	margin-bottom: 20px;
-        margin-left: 10px;
-    }
-
-    .post-content h5 {
-    	font-family: 'Raleway', sans-serif;
-    	font-size: 1.2em;
-    	margin-bottom: 20px;
-        font-weight: 800;
-    }
-
-    .post-content p, li, td {
-    	text-align: justify;
-    	font: 16px/1.5 'Raleway', sans-serif;
-    }
-
-    .post-content p {
-    	margin: 8px 0;
-    }
-
-    .post-content li {
-    	margin: 8px 0;
-    }
-
-    .post-content pre {
-        margin: 20px 5px;
-        padding: 0;
-    }
-
-    .post-content pre code {
-        font-size: 16px;
-        line-height: 25px;
-        margin-left: 20px;
-    }
-
-    .post-content ol ul li, .post-content ul ol li {
-        font-family: 'Raleway', sans-serif;
-        font-size: 1em;
-    }
-
-    .post-content .col-xs-12 {
-        margin-bottom: 15px;
-    }
-
-    .post-content code pre.output {
-        padding: 20px;
-        width:30%;
-        font-size: 1em;
-    }
-
-    .content-date {
-    	color: #828282;
-    	padding-left: 15px;
-    	text-align: right;
-    	font-size: 0.8em;
-    }
-
-    .navigation {
-    	margin-top: 30px;
-    	margin-bottom: 30px;
-        text-align: center;
-    }
-
-    .navigation .glyphicon {
-    	font-size: 14px;
-    }
-
-    .navigation a {
-        max-width: 30%;
-        padding: 10px;
-        font-size: 16px;
-    }
-
-    .navigation a:nth-child(2) {
-        margin: auto 5% auto 5%;
-    }
-
-    .indented {
-        margin: 15px auto 15px 100px;
-    }
-
-/* -----------------------------------Specific to Posts----------------------------------- */
-
-    /* ---------------------------------Post 3--------------------------------- */
-
-    .character-set {
-        margin: 30px auto;
-        width: 50%;
-    }
-
-    .character-set td {
-        padding: 10px;
-        text-align: center;
-    }
-
-    .character-set tr:nth-child(1) {
-        background-color: #e0eeff;
-    }
-
-    .character-set tr:last-child {
-        border-top: 1px solid rgba(0, 0, 0, 0.1);
-    }
-
-    .character-set tr td:nth-child(1) {
-        width: 125px;
-        font-size: 19px;
-        background-color: #e0eeff;
-        border-right: 1px solid rgba(50, 0, 0, 0.3);
-    }
-
-    .keywords {
-        margin: 30px auto;
-        width: 70%;
-        font-size: 0.8em;
-    }
-
-    .keywords tr td {
-        text-align: center;
-        padding: 5px;
-    }
-
-    .keywords tr td:nth-child(1) {
-        background-color: #e0eeff;
-        border-right: 1px solid rgba(50, 0, 0, 0.3);
-    }
-
-    .keywords tr:nth-child(1) td {
-        background-color: #e0eeff;
-        border-bottom: 1px solid rgba(100, 0, 0, 0.2);
-    }
-
-    /* ---------------------------------Post 4--------------------------------- */
-
-    .range {
-        margin: 30px auto;
-        width: 40%;
-        font-size: 0.8em;
-    }
-
-    .range tr td {
-        text-align: center;
-        padding: 5px;
-    }
-
-    .range tr:nth-child(1) td {
-        font-size: 1.2em;
-        padding: 5px;
-        background-color: #cea1ed;
-        border-bottom: 2px solid #000;
-    }
-
-    #image-4-1, #image-4-6, #image-4-7 {
-        width: 85%;
-        margin: 0 auto;
-    }
-
-    #image-4-2, #image-4-5 {
-        width: 80%;
-        margin: 10px auto;
-    }
-
-    #image-4-3, #image-4-4, #image-4-8 {
-        margin: 20px auto;
-    }
-
-    /* ---------------------------------Post 5--------------------------------- */
-
-    #image-5-1, #image-5-2, #image-5-3, #image-5-4 {
-        margin: 20px auto 10px auto;
-    }
-
-    #image-5-5 {
-        width: 80%;
-        margin: 20px auto -10px auto;
-    }
-
-    #image-5-6 {
-        width: 80%;
-        margin: 20px auto 10px auto;
-    }
-
-    #modifiers {
-        margin: 30px auto;
-        width: 60%;
-        border: 2px solid #333;
-    }
-
-    #modifiers tr td {
-        text-align: center;
-        padding: 5px;
-        font-size: 15px;
-        border-right: 1px solid #333;
-    }
-
-    #modifiers tr:nth-child(1) td {
-        font-size: 16px;
-        padding: 5px;
-        background-color: #cea1ed;
-        font-weight: 800;
-        border-bottom: 1px solid #333;
-    }
-
-    #modifiers tr:nth-child(1) td:nth-child(1) {
-        border-bottom: 1px solid #333;
-    }
-
-    #modifiers tr:nth-child(2) td {
-        font-size: 16px;
-        padding: 5px;
-        background-color: #cea1ed;
-        border-bottom: 2px solid #333;
-    }
-
-/* -----------------------------------Media Queries----------------------------------- */
-
-@media only screen and (max-width: 768px) {
-
-    #about-me {
-        padding-top: 0;
-    }
-
-    #about-me h1 {
-        margin-top: 5px;
-    }
-
-    .footer .col-xs-12 {
-        margin-top: 30px;
-        text-align: center;
-    }
-
-    #recent .heading {
-        margin: 0;
-        font-size: 1.35em;
-    }
-
-    #recent .post-list {
-        padding-left: 0;
-    }
-
-    #recent .post {
-        padding-right: 0;
-    }
-
-    #recent .post .title {
-        font-size: 1.8em;
-    }
-
-    #recent .post .meta {
-        font-size: 0.75em;
-    }
-
-    #recent .post .desc {
-        font-size: 0.8em;
-    }
-
-    .post-content p, li, td {
-    	text-align: justify;
-    	font: 14px/1.5 'Raleway', sans-serif;
-    }
-
-    .post-content pre code {
-        margin-left: 0;
-        font-size: 11px;
-        line-height: 18px;
-    }
-
-    .post-content h1 {
-        font-size: 5em;
-    }
-
-    .post-content h2 {
-        font-size: 1.75em;
-    }
-
-    .post-content h3 {
-        font-size: 1.6em;
-    }
-
-    .post-content h4 {
-        font-size: 1.5em;
-    }
-
-    .full-width-xs {
-        width: 100%;
-    }
-
-    .post-content code pre.output {
-        padding: 10px;
-        width: 100%;
-        font-size: 0.9em;
-    }
-
-    .keywords {
-        font-size: 10px;
-    }
-
-    .range {
-        font-size: 12px;
-    }
-
-    .indented {
-        margin: 10px;
-    }
-
-    .navigation .glyphicon {
-    	font-size: 10px;
-    }
-
-    .navigation a {
-        max-width: 30%;
-        padding: 10px;
-        font-size: 13px;
-    }
-}
-
-@media only screen and (max-width: 992px)  {
-
-    .footer .center h4 {
-        font-size: 20px;
-    }
-
-    .footer .right p:nth-child(1) {
-        font-size: 1.3em;
-    }
-
-    .footer .right a {
-        font-size: 1.3em;
-    }
-
-    .brand:hover:before {
-      visibility: hidden;
-      -webkit-transform: scaleX(0);
-      transform: scaleX(0);
-    }
-
-    #recent .post .title::after {
-    	border: none;
-    	-webkit-transition: none;
-    	transition: none;
-    }
-
-    #recent .post .title:hover::after {
-        border: none;
-    }
-
-    .image-4-1, .image-4-2 {
-        width: 100%;
-    }
-}
-
-@media only screen and (max-width: 1032px) {
-    header .text {
-        left: 55%;
-    }
-}
-
 {% include css/archive.css %}
+
+{% include css/practice.css %}
+
+{% include css/posts.css %}
+
+{% include css/post-specific.css %}
