--- a/_includes/css/post-specific.css
+++ b/_includes/css/post-specific.css
@@ -84,7 +84,7 @@
     border-bottom: 1px solid #333;
 }
 
-/* ---------------------------------Post 6--------------------------------- */
+/* ----------------------------------------------Post 6---------------------------------------------- */
 
 .image-6-1 {
     width: 360px;
@@ -138,8 +138,34 @@
     border-bottom: 1px solid #333;
 }
 
+/* ----------------------------------------------Post 7---------------------------------------------- */
 
-/* -----------------------------------Media Queries----------------------------------- */
+.post-content .ascii-values tr th {
+    background-color: #e0eeff;
+    border-bottom: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+}
+
+.post-content .ascii-values tr td {
+    padding: 7px 10px;
+    border-bottom: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+}
+
+.post-content .escape-sequences tr th {
+    background-color: #e0eeff;
+    border-bottom: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+}
+
+.post-content .escape-sequences tr td {
+    padding: 7px 10px;
+    border-bottom: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+}
+
+
+/* ----------------------------------------------Media Queries---------------------------------------------- */
 
 @media only screen and (max-width: 768px) {
 
