--- a/_includes/css/post-specific.css
+++ b/_includes/css/post-specific.css
@@ -102,7 +102,7 @@
 }
 
 .post-content .denormal-numbers, .post-content .float-modifiers {
-    margin: 0;
+    margin: 0 auto;
 }
 
 .post-content .denormal-numbers tr td {
@@ -162,6 +162,33 @@
     padding: 7px 10px;
     border-bottom: 1px solid #ccc;
     border-right: 1px solid #ccc;
+}
+
+/* ----------------------------------------------Post 8---------------------------------------------- */
+
+.post-content .image-8-1 {
+    width: 125px;
+    margin-left: 10px;
+}
+
+.post-content .operators tr th {
+    background-color: #e0eeff;
+    border-bottom: 1px solid #ccc;
+    border-right: 1px solid #333;
+}
+
+.post-content .operators tr td {
+    border-bottom: 1px solid #ccc;
+    border-right: 1px solid #333;
+}
+
+.post-content .assignment-operators-container {
+    max-width: 100%;
+    overflow-x: auto;
+}
+
+.post-content .assignment-operators-container .operators {
+    margin: 0 auto;
 }
 
 
