--- a/_layouts/code-like-pro.html
+++ b/_layouts/code-like-pro.html
@@ -9,6 +9,8 @@ layout: default
         {{ content }}
         {% if page.link %}
             <p class="solution">Download the solution <a href="{{ page.link }}">here</a>.</p>
+        {% else %}
+            <p class="solution">Solution will be uploaded soon.</p>
         {% endif %}
     </div>
     <div class="col-xs-12"><p>You are supposed to write the code for all problems and then check the solution file. The code present in the solution is supposed to be the best and most efficient code. You can mail your solution to me on <a>ankan.learncwithme@gmail.com</a> and I'll surely check it and if I find it better I'll put it in the solution.</p></div>
