--- a/_includes/css/posts.css
+++ b/_includes/css/posts.css
@@ -4,9 +4,15 @@
     font-size: 14px;
 }
 
+.post-content {
+    width: 85%;
+    padding-left: 0;
+    padding-right: 0;
+}
+
 .post-content h1 {
     font-family: 'Paytone One', sans-serif;
-    font-size: 90px;
+    font-size: 85px;
     color: #222;
     text-align: center;
     margin-bottom: 15px;
@@ -26,18 +32,15 @@
 }
 
 .post-content h4 {
-    font-size: 26px;
-    margin-top: 30px;
+    font-size: 24px;
+    margin-top: 40px;
     margin-bottom: 20px;
-    margin-left: 15px;
-    font-weight: 800;
 }
 
 .post-content h5 {
     font-size: 21px;
     margin-bottom: 20px;
     margin-top: 25px;
-    font-weight: 800;
 }
 
 .post-content p {
@@ -96,6 +99,7 @@
 .post-content .table-container {
     max-width: 100%;
     overflow-x: auto;
+    margin: 30px auto;
 }
 
 .post-content table {
@@ -147,8 +151,95 @@
     margin: auto 5% auto 5%;
 }
 
+#reference-nav {
+    padding-left: 25px;
+    font-size: 28px;
+    list-style: none;
+    width: 190px;
+}
+
+#reference-nav p {
+    font-size: 18px;
+    color: #333;
+    margin-bottom: 25px;
+    margin-left: -10px;
+}
+
+#reference-nav li {
+    text-align: left;
+    color: #888;
+    width: 100%;
+}
+
+#reference-nav li.level1 {
+    margin-left: 0;
+    font-size: 15px;
+    margin-top: 10px;
+}
+
+#reference-nav li.level2 {
+    margin-left: 12px;
+    font-size: 14px;
+}
+
+#reference-nav li.active {
+    color: #23527c;
+}
+
+#reference-nav li a:hover, #reference-nav li a:active, #reference-nav li a:focus {
+    cursor: pointer;
+    text-decoration: none;
+    color: #337ab7;
+}
+
+#reference-nav.affix-top {
+    position: absolute;
+    top: 95px;
+    width: 185px;
+}
+
+#reference-nav.affix {
+    top: 75px;
+    width: 185px;
+}
+
+#reference-nav.affix-bottom {
+    position: absolute;
+    top: 190px;
+    width: 185px;
+}
+
 
 /* -----------------------------------Media Queries----------------------------------- */
+
+@media only screen and (max-width: 1200px) {
+
+    .post-content {
+        width: 90%;
+    }
+
+    #reference-nav {
+        padding-left: 15px;
+    }
+
+    #reference-nav li {
+        font-size: 14px;
+        width: 150px;
+    }
+
+    #reference-nav li.level1 {
+        font-size: 14px;
+    }
+
+    #reference-nav li.level2 {
+        font-size: 13px;
+    }
+
+    #reference-nav p {
+        font-size: 16px;
+    }
+
+}
 
 @media only screen and (max-width: 768px) {
 
