--- a/_layouts/code-like-pro.html
+++ b/_layouts/code-like-pro.html
@@ -15,3 +15,13 @@ layout: default
     </div>
     <div class="col-xs-12"><p>You are supposed to write the code for all problems and then check the solution file. The code present in the solution is supposed to be the best and most efficient code. You can mail your solution to me on <a>ankan.learncwithme@gmail.com</a> and I'll surely check it and if I find it better I'll put it in the solution.</p></div>
 </div>
+
+{% if page.comments %}
+<div class="row">
+    <div class="col-xs-12">
+        <div class="container-fluid comments" style="margin: 0 auto;">
+            <div class="fb-comments" data-href="https://ankan17.github.io/learncwithme{{ page.url }}" data-numposts="5"></div>
+        </div>
+    </div>
+</div>
+{% endif %}
