--- a/_layouts/crazy-with-c.html
+++ b/_layouts/crazy-with-c.html
@@ -10,3 +10,13 @@ layout: default
     </ol>
     <div class="col-xs-12"><p>Have any doubt regarding the answer of any question? Not satisfied with any answer? Send in an email regarding your doubt on <a>ankan.learncwithme@gmail.com</a>. I'll be happy to hear from you.</p></div>
 </div>
+
+{% if page.comments %}
+<div class="row">
+    <div class="col-xs-12">
+        <div class="container-fluid comments" style="margin: 0 auto;">
+            <div class="fb-comments" data-href="https://ankan17.github.io/learncwithme{{ page.url }}" data-numposts="5"></div>
+        </div>
+    </div>
+</div>
+{% endif %}
