--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -4,12 +4,17 @@ layout: default
 
 <div post="{{ page.serial }}" class="container post-content">
     <div class="row">
-        <h1>{{ page.title }}</h1>
-    	<h2>{{ page.meta }}</h2>
-    	<p class="content-date"><strong>{{ page.date | date: "%B %d, %Y" }}</strong></p>
-        <div class="col-xs-12">
+        <div class="col-md-10 col-xs-12">
+            <h1>{{ page.title }}</h1>
+        	<h2>{{ page.meta }}</h2>
+        	<p class="content-date"><strong>{{ page.date | date: "%B %d, %Y" }}</strong></p>
             {{ content }}
         </div>
+        <nav class="col-md-2 hidden-sm hidden-xs" id="reference-navigation" role="navigation">
+            <ul id="reference-nav">
+                <p>Quick Nav</p>
+            </ul>
+        </nav>
     </div>
 </div>
 
