--- a/_layouts/code-like-pro.html
+++ b/_layouts/code-like-pro.html
@@ -8,7 +8,7 @@ layout: default
     <div class="col-sm-11 col-xs-12">
         {{ content }}
         {% if page.link %}
-            <p class="solution">Download the solution <a href="{{ page.link }}">here</a>.</p>
+            <p class="solution">Find the solutions <a href="{{ page.link }}">here</a>.</p>
         {% else %}
             <p class="solution">Solution will be uploaded soon.</p>
         {% endif %}
