--- a/_includes/css/practice.css
+++ b/_includes/css/practice.css
@@ -208,6 +208,12 @@
     text-decoration: none;
 }
 
+#code-like-pro .img-responsive {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
+}
+
 @media only screen and (max-width: 768px) {
 
     #practice {
@@ -342,16 +348,16 @@
         padding-left: 25px;
     }
 
-    #code-like-pro ol li {
+    #code-like-pro ol li, #code-like-pro ol li p {
         font-size: 15px;
         margin-bottom: 15px;
+        line-height: 20px;
     }
 
     #code-like-pro p {
         font-size: 17px;
         line-height: 26px;
         margin-top: 20px;
-        /*text-align: left;*/
     }
 
     #code-like-pro .solution {
