--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,7 @@
 
 </head>
 <body>
+    {% include google-analytics.html %}
     {% include facebook_sdk.html %}
 	<div class="container-fluid">
         <!-- Navbar -->
